# old-pet-projects

c_server-client/: .clang-format  LICENSE  README.md
c_server-client/include/: server.h
c_server-client/src_client/: Makefile  client.c
client-server-c/: Makefile
client-server-c/include/: threadpool.h
client-server-c/src_server/: Makefile  extra.c  server.c  threadpool.c  utils.c
lem_in/: .gitignore  .gitmodules  author  makefile
lem_in/debug/: debug.c
lem_in/map/: ORGY.map  big1_(53-55).map  big2_(61-63.map  big3_(49-51).map  check_bfs.map  chiiida.map  lite.map  sp0_(87-93).map  sp2_(77-86).map  sp3_(65-72).map
lem_in/map/viz_map/: a.xcf  light.xcf  newest.xcf
lem_in/src/: main.c
lem_in/src/graph/: graph_edge_del.c
lem_in/src/solver/: solv_bellman_ford_extra.c  solv_bfs_extra.c  solv_extra.c  solv_step_action.c  solv_way_create.c
lem_in/src/validation/: valid_extra.c
lemin-c/: README.md
lemin-c/debug/: valid_coord.c
lemin-c/include/: error.h  graph.h  lem_in.h
lemin-c/map/: SP1.map  a.map  bellamn_check.map  big0_(46-49).map  newest.map  petersen  sp1_(73-86).map
lemin-c/map/viz_map/: chiida.xcf
lemin-c/src/: extra.c
lemin-c/src/graph/: graph_edge.c  graph_extra.c  graph_hashtab.c  graph_vertex.c
lemipc/: .gitignore  README.md
lemipc-rs/ipc/: .rustfmt.toml  Cargo.toml  reinit.sh
lemipc-rs/lemipc/: .rustfmt.toml
lemipc/lemipc/: Cargo.toml  LICENSE  README.md
lemipc/lemipc/src/: action.rs  game.rs  main.rs
lemipc/lemipc/src/action/: z_findway.rs
lemipc/lemipc/src/game/: map.rs
lemipc/lemipc_serde/: Cargo.toml
(+26 files in other folders)
