[package]
name = "lem-ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# extra = { path = "extra" }
# ctrlc = "3.2.2"
ipc = { path = "../ipc" }
lemipc_serde = { path = "../lemipc_serde" }
libc = "0.2.0"
byteorder = "1.3.4"
structopt = "0.3.14"